# realbook

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: code-quality-checks.yml
qml/: main.qml
resources/: main.qrc
src/realbook/: __main__.py
src/realbook/controllers/: metronome.py  time.py
src/realbook/logic/: tempo.py
src/realbook/ports/ui/: views.py
tests/unit/realbook/: hello_test.py
tests/unit/realbook/logic/: tempo_test.py
