[tool.poetry]
name = "realbook"
version = "0.1.0"
description = "A simple program to create lead sheets as those found on the realbook"
authors = ["Erick G. Islas-Osuna <erickisos653@gmail.com>"]
packages = [
    { include = "realbook", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide6 = "^6.5.2"

[tool.poetry.dev-dependencies]
tox = "^4.11.3"
mypy = "^1.7"
black = "^23.9.1"
isort = "^5.12.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"
pytest = "^7.4.2"
pre-commit = "^3.5.0"
hypothesis = {extras = ["zoneinfo"], version = "^6.89.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=79
skip-string-normalization = true
target-version=['py39']
preview = true
exclude = '''
/(
    /.git
  | /.mypy_cache
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
